force-app/main/default/objects/SLA_Tracker__c/SLA_Tracker__c.object-meta.xml
<CustomObject>
    <label>SLA Tracker</label>
    <nameField>
        <displayFormat>ST-{0000}</displayFormat>
        <label>SLA Tracker</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SLA Trackers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>