force-app/main/default/objects/SLA_Tracker__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>SLA Trackers</relationshipLabel>
    <relationshipName>SLA_Trackers</relationshipName>
    <type>Lookup</type>
</CustomField>