force-app/main/default/objects/SLA_Tracker__c/fields/Escalation_Level__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Level__c</fullName>
    <label>Escalation Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>