force-app/main/default/objects/SLA_Tracker__c/fields/SLA_DeadLine__c.field-meta.xml
<CustomField>
    <fullName>SLA_DeadLine__c</fullName>
    <formula>IF(ISPICKVAL(Case__r.Priority , &quot;High&quot;)  , (SLA_Start_Time__c + (8/24)),
  IF( ISPICKVAL(Case__r.Priority, &quot;Medium&quot;) ,(SLA_Start_Time__c + 1), (SLA_Start_Time__c + 2)) )</formula>
    <label>SLA DeadLine</label>
    <type>DateTime</type>
</CustomField>