force-app/main/default/objects/SLA_Tracker__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SLA_Start_Time__c</columns>
    <columns>SLA_DeadLine__c</columns>
    <columns>SLA_Status__c</columns>
    <columns>Case__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>