force-app/main/default/objects/SLA_Tracker__c/listViews/SLA_Escalation_Queue_SLA_Tracker.listView-meta.xml
<ListView>
    <fullName>SLA_Escalation_Queue_SLA_Tracker</fullName>
    <filterScope>Queue</filterScope>
    <label>SLA_Escalation_Queue</label>
    <queue>SLA_Escalation_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>